correction affichage pr tel

--- a/caisse.html
+++ b/caisse.html
@@ -93,7 +93,7 @@ font-size:5em;font-weight: 1000; text-shadow: -1px -1px white, 1px 1px #333;
 position:relative;
 color: blueviolet;
 "
-        >htrvj</span>
+        ></span>
     </div>
 
     <div style="position: absolute; top: 1em;right: 1em;text-align: center;padding:0.5em; font-size: 2em; border-radius: 30px; background-color: orangered;">
