--- a/demande_tuto_ou_non.html
+++ b/demande_tuto_ou_non.html
@@ -27,7 +27,7 @@
 
 
 <div id="tuto">
-    <span>Veux tu voir le tutoriel? </span>
+    <span>Veux tu voir le tutoriel? <br></span>
     <input type="button" value="oui" onclick="location='tuto_debut.html'">
     <input type="button" value="non" onclick="location='caisse.html'">
 </div></section>
@@ -37,7 +37,7 @@
         margin-bottom:0.5em;text-align: center; font-size: 5em; font-weight: 1000; text-shadow: -1px -1px white, 1px 1px #333;  color: orangered
     }
     input{
-        margin: 1em; display: inline-block; width : 10em; text-align: center; padding: 0em 1em 1em 1em; font-size: 3em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333">ok</button>
+        margin: 1em; display: inline-block; width : 30%; text-align: center; padding: 0em 1em 1em 1em; font-size: 3em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333">ok</button>
     }
     #tuto {
         text-align: center;
