--- a/tuto_caisse_fin.html
+++ b/tuto_caisse_fin.html
@@ -38,7 +38,6 @@
 <script>
     var cliquer_pour_etre_aide = false;
 </script>
-<img  id="fleche" src="image/next.png" title="SUIVANT" style="display: none; width: 10%; position:absolute;bottom: 10%; right: 10%">
 
 <div id="deco">
     <img id="porte" src="image/magasin/porte_delabree.png" style="position:absolute;width: 12%; height: 40%; left: 30%; bottom: 42%">
@@ -77,7 +76,7 @@ position: absolute; width: 12%; left: 10%; top: 72%;">
 <div style="position: absolute; margin-bottom: 0.5em;right: 1em;text-align: center;padding:0.5em; font-size: 1.5em; border-radius: 30px; background-color: orangered;">
     <div id="score" style=" height: 1em; font-weight: 1000;"></div>
 
-    <input type="image" src="image/t0.svg" style="margin-top: 0.5em;width: 10em;" id="etoiles">
+    <input type="image" src="image/t1.png" style="margin-top: 0.5em;width: 10em;" id="etoiles">
 </div>
 
 
@@ -86,7 +85,9 @@ position: absolute; width: 12%; left: 10%; top: 72%;">
     <input type="image" src="image/sous.png" style="width: 10em; ">
 
 </div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <img  id="fleche" src="image/next.png" title="SUIVANT" style="display: none; width: 10%; position:absolute;bottom: 10%; right: 10%">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script>
     /* $.getJSON('evolution', function(data){
      console.log(data);
