--- a/tuto_debut2.html
+++ b/tuto_debut2.html
@@ -105,7 +105,7 @@ top:5px"></span>
                 break
             } else {
                 formules[i]["left"] += 1;
-                document.getElementById('g' + i).style.top = formules[i]["top"] + 'px';
+                document.getElementById('g' + i).style.bottom = formules[i]["bottom"] + 'px';
                 document.getElementById('g' + i).style.left = formules[i]["left"] + 'px';           }        }    }
     function deplaceSur (id) {
         //spécifier le nombre d'objets ici
@@ -121,8 +121,8 @@ top:5px"></span>
         formules = new Array();
         for (var i=0; i < nbFormules; i++) {
             formules[i] = new Array();
-            formules[i]["left"] = 200;
-            formules[i]["top"] = 400;
+            formules[i]["left"] = 0;
+            formules[i]["bottom"] = 10;
 
             document.write ('<span id="g'+i+'" style="position: absolute; left: '+formules[i]["left"]+'px; top: '+formules[i]["top"]+'px">');
             // placer ici l'objet qui tombe !
