--- a/tuto_ext2.html
+++ b/tuto_ext2.html
@@ -31,7 +31,7 @@ background-color: #2980B9">
 
 <img onclick="remplir_bulle()" id="fleche" src="image/next.png" title="SUIVANT" style="display: none; width: 10%; position:absolute;bottom: 10%; right: 10%">
 
-<div id="zone2" style="position: absolute; width: 300px; height: 600px; "> </div>
+<div id="zone2" style="position: absolute; width: 500px; height: 100px; background-color: "> </div>
 
 <div id="bulle" style="position: absolute;
     left:5%;
@@ -69,8 +69,10 @@ top:5px"></span>
                     document.getElementById("fleche").style.display = "block";
                     break
                 } else {
-                    formules[i]["left"] += 1;
-                    document.getElementById('g' + i).style.top = formules[i]["top"] + 'px';
+                    formules[i]["left"] += 2;
+                    formules[i]["bottom"] += 1;
+
+                    document.getElementById('g' + i).style.bottom = formules[i]["bottom"] + 'px';
                     document.getElementById('g' + i).style.left = formules[i]["left"] + 'px';           }        }    }
         function deplaceSur (id) {
             //spécifier le nombre d'objets ici
@@ -86,8 +88,8 @@ top:5px"></span>
             formules = new Array();
             for (var i=0; i < nbFormules; i++) {
                 formules[i] = new Array();
-                formules[i]["left"] = 0;
-                formules[i]["top"] = 400;
+                formules[i]["left"] = 300;
+                formules[i]["bottom"] = 0;
 
                 document.write ('<span id="g'+i+'" style="position: absolute; left: '+formules[i]["left"]+'px; top: '+formules[i]["top"]+'px">');
                 // placer ici l'objet qui tombe !
