--- a/caisse.html
+++ b/caisse.html
@@ -746,7 +746,7 @@ color: blueviolet;
 
     </script>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <!--  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>-->
     <script>
 
 
