test chargement img

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </script>
     </div>
     <script src="chargement_elements.js"></script>
-   <!-- <script src="choix_init.js" style="transition: opacity 0.2s ease">    </script>-->
+    <script src="choix_init.js" style="transition: opacity 0.2s ease">    </script>
 </section>
 
 </body>
