--- a/debut_jeu.html
+++ b/debut_jeu.html
@@ -4,11 +4,11 @@
     <title>Ma boulangerie</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="boulangerie.css" />
-    <script type="text/javascript" src="./boulangerie.js"> </script>
     <meta name="author" content="Eloïse DELHOMELLE">
     <meta name="description" content="TD2">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <link rel="stylesheet" href="chargement_elements.css">
+    <meta http-equiv="Cache-control" content="public" max-age="31536000">
 
 </head>
 <body style="color: #333333">
