--- a/demandeEnregistrement_importer.html
+++ b/demandeEnregistrement_importer.html
@@ -4,6 +4,7 @@
     <title>My Bakey _ caisse</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="chargement_elements.css">
+    <meta http-equiv="Cache-control" content="public" max-age="31536000">
 
 </head>
 <style>
