--- a/demande_tuto_ou_non.html
+++ b/demande_tuto_ou_non.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Projet individuel">
     <meta name="keywords" content="HTML,CSS,JavaScript">
     <link rel="stylesheet" href="chargement_elements.css">
+    <meta http-equiv="Cache-control" content="public" max-age="31536000">
 
 </head>
 
