--- a/exterieur.html
+++ b/exterieur.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="chargement_elements.css">
     <link rel="stylesheet" type="text/css" href="menu.css" />
+    <meta http-equiv="Cache-control" content="public" max-age="31536000">
 
 </head>
 <body style="
