--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta http-equiv="Cache-control" content="public" max-age="31536000">
 
 
-<link rel="stylesheet" href="chargement_elements.css">
+
+    <link rel="stylesheet" href="chargement_elements.css">
 </head>
 
 <style>
@@ -59,7 +60,7 @@
             }
             preload(
                 "image/chat.png",
-                "image/chien.png",
+                "image/chien.PNG",
                 "image/fleche.svg",
                 "image/fleche_pointeur.svg",
                 "image/fond_boulangerie.png",
