--- a/init.html
+++ b/init.html
@@ -6,9 +6,10 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="boulangerie.css" />
     <meta name="author" content="Eloïse DELHOMELLE">
-    <meta name="description" content="TD2">
+    <meta name="description" content="PI">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <link rel="stylesheet" href="chargement_elements.css">
+    <meta http-equiv="Cache-control" content="public" max-age="31536000">
 
 </head>
 <script>
