--- a/magasin.html
+++ b/magasin.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="chargement_elements.css">
     <link rel="stylesheet" href="menu.css">
+    <meta http-equiv="Cache-control" content="public" max-age="31536000">
 
 
 </head>
