--- a/recuperer_compte.html
+++ b/recuperer_compte.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" type="text/css" href="boulangerie.css" />
     <!--    <script type="text/javascript" src="./boulangerie.js"> </script>-->
     <meta name="author" content="Eloïse DELHOMELLE">
-    <meta name="description" content="TD2">
+    <meta name="description" content="PI">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <link rel="stylesheet" href="chargement_elements.css">
+    <meta http-equiv="Cache-control" content="public" max-age="31536000">
 
 </head>
 
