--- a/stock.html
+++ b/stock.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="chargement_elements.css">
 
     <link rel="stylesheet" type="text/css" href="menu.css" />
+    <meta http-equiv="Cache-control" content="public" max-age="31536000">
 
 </head>
 <body style="    background-image: url('./image/fond_boulangerie.png') ; background-size: cover;
