--- a/telechargement_json_config_joueur.html
+++ b/telechargement_json_config_joueur.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <meta http-equiv="Cache-control" content="public" max-age="31536000">
+
 </head>
 <body>
 
