--- a/tuto_caisse_fin.html
+++ b/tuto_caisse_fin.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="menu.css" />
     <link rel="stylesheet" href="chargement_elements.css">
 
+    <meta http-equiv="Cache-control" content="public" max-age="31536000">
 
 
 
