--- a/tuto_debut3.html
+++ b/tuto_debut3.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>My Bakery, TUTORIEL</title>
     <link rel="stylesheet" href="chargement_elements.css">
+    <meta http-equiv="Cache-control" content="public" max-age="31536000">
 
 </head>
 <style>
