--- a/tuto_magasin2.html
+++ b/tuto_magasin2.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="menu.css" />
     <link rel="stylesheet" href="chargement_elements.css">
+    <meta http-equiv="Cache-control" content="public" max-age="31536000">
 
 </head>
 <body style="text-align: center;background-image: url('image/fond_magasin.jpg'); ">
